# AirlineDataHub

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  repo-structure.txt
data/: country_code_map.json
data/processed/: processed_data_path.md
data/raw/: raw_data_path.md
docker/: Dockerfile
docs/: project_overview.md  repo-structure.md
notebooks/: data_exploration.ipynb  data_modeling.ipynb  data_transfomation.ipynb
pipeline/: run-pipeline.sh
sql/: aggregated_table.sql  get_schema.sql  schema_create.sql  table_population.sql
src/: create_agg_table.py  ingestion.py  loading_redshift.py  loading_sqlite.py  transforms.py
tests/: test_ingestion.py  test_loading_sqlite.py  test_transforms.py
